added doxygen to the build process and added conform comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ SET( KardioPerfusionUI
 SET( KardioPerfusionHeaders
 	main/KardioPerfusion.h
 	main/dicomselectordialog.h
+	vtkwidgets/multiplanarreformatwidget.h
 	analyse/tacdialog.h
 	imagetree/ctimagetreemodel.h
 #	analyse/segmentselectbutton.h
@@ -215,5 +216,15 @@ TARGET_LINK_LIBRARIES( KardioPerfusion
   ITKVTKIntegration
 )
 
+# add a target to generate API documentation with Doxygen
 
+FIND_PACKAGE(Doxygen)
+IF(DOXYGEN_FOUND)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+  ADD_CUSTOM_TARGET(DOCUMENTATION ALL
+  ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  COMMENT "Generating API documentation with Doxygen" VERBATIM
+)
+endif(DOXYGEN_FOUND)
 
