added class for mmid4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ SET( KardioPerfusionSrcs
 
 	analyse/perfusionAnalyzer.cxx
 	analyse/perfusionAnalyzer.h
+	analyse/mmid4Analyzer.cxx
+	analyse/mmid4Analyzer.h
 	analyse/tacdialog.cpp
 	analyse/tacdialog.h
 	analyse/timedensitydata.cpp
