changed from ShrinkAverageFilter to BinShrinkFilter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,8 @@ SET( KardioPerfusionSrcs
 	itkfilter/itkFindLeftVentricle.h
 	itkfilter/itkShrinkAverageFilter.txx
 	itkfilter/itkShrinkAverageFilter.h
+	itkfilter/itkBinShrinkImageFilter.h
+	itkfilter/itkBinShrinkImageFilter.hxx
 
 )
 
